<resources>
    <string name="app_name">GameCardinal</string>
    <!-- Placeholders and friends -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_string"> </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- Server Information -->
    <string name="server_path"> http://coms-309-056.cs.iastate.edu:8080 </string>
    <string name="postman_path">https://8f744a05-1b4d-4c7a-a7f8-224055616d90.mock.pstmn.io</string>
    <!-- Accessibility -->
    <string name="access_logo_desc">Image of the GameCardinal logo.</string>
    <string name="access_pfp_upload_desc">Blank image button for uploading profile pictures.</string>
    <!-- Prompts -->
    <string name="username_prompt">Username:</string>
    <string name="password_prompt">Password:</string>
    <string name="name_prompt">Name:</string>
    <string name="email_prompt">Email:</string>
    <string name="pfp_prompt">Profile Picture:</string>
    <string name="phone_prompt">Phone #:</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_bad_credentials">Invalid username or password. Please try again.</string>
    <string name="login_error_occurred">An error occurred while attempting to log in.</string>
    <string name="login_welcome_back">Welcome back!</string>
    <string name="login_please_login">Please log in.</string>
    <!-- Registration -->
    <string name="register">Register</string>
    <string name="register_error_occurred">An error occurred while attempting to register.</string>
    <!-- SevenUpSevenDown -->
    <string name="SevenUpSevenDown">SevenUpSevenDown</string>
    <string name="susd_error_occurred">An error occurred while attempting to send game info.</string>
    <!-- Preference Keys -->
    <string name="prefs_key">userPrefs</string>
    <string name="prefs_curr_uid">currUserID</string>
    <!-- Menu Titles -->
    <string name="menu_profile">Profile</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_compose_message">New Message</string>
    <string name="menu_recent_messages">Recent Messages</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="usersimage">UsersImage</string>
    <string name="usersetting">UserSetting</string>
    <string name="user_settings">User Settings</string>
</resources>