<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_user_profile" />

    <item android:id="@+id/action_recent_messages"
        android:title="@string/menu_recent_messages"
        android:icon="@drawable/ic_message" />

    <item android:id="@+id/action_contacts"
        android:title="@string/menu_contacts"
        android:icon="@drawable/ic_contacts" />

    <item android:id="@+id/action_leaderboard"
        android:title="@string/menu_leaderboard"
        android:icon="@drawable/ic_trophy" />

    <item android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_gears" />
</menu>