<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/OverallConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/BackgroundTheme"
            android:layout_width="347dp"
            android:layout_height="509dp"
            android:background="#FFF5F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/UsersImageSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/usersimage"
            app:layout_constraintEnd_toEndOf="@+id/BackgroundTheme"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/BackgroundTheme"
            app:layout_constraintTop_toTopOf="@+id/BackgroundTheme"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <ScrollView
            android:id="@+id/SettingsScrollVIew"
            android:layout_width="316dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toBottomOf="@+id/BackgroundTheme"
            app:layout_constraintEnd_toEndOf="@+id/BackgroundTheme"
            app:layout_constraintStart_toStartOf="@+id/BackgroundTheme"
            app:layout_constraintTop_toBottomOf="@+id/UsersImageSettings"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/UserSettingsContraintView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/usersetting">

                    <ImageView
                        android:id="@+id/user_main_settings_Image"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:mipmap/sym_def_app_icon"
                        tools:ignore="ImageContrastCheck"
                        android:contentDescription="TODO" />

                    <Switch
                        android:id="@+id/UserSettingsSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/user_settings"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/user_main_settings_Image"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/UserSettingsListConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/username_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="usernameSettingPromptImage"
                        android:visibility="visible"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_media_play"
                        tools:ignore="ImageContrastCheck"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Username:"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/username_image"
                        app:layout_constraintStart_toEndOf="@+id/username_image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/username_textfield"
                        android:layout_width="158dp"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintBottom_toBottomOf="@+id/username_image"
                        app:layout_constraintStart_toEndOf="@+id/username_text"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageView
                        android:id="@+id/name_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/username_image"
                        app:srcCompat="@android:drawable/ic_media_play"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name:"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/name_image"
                        app:layout_constraintEnd_toEndOf="@+id/username_text"
                        app:layout_constraintStart_toEndOf="@+id/name_image"
                        app:layout_constraintTop_toBottomOf="@+id/username_image" />

                    <EditText
                        android:id="@+id/name_textfield"
                        android:layout_width="160dp"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintBottom_toBottomOf="@+id/name_image"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/username_image"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageView
                        android:id="@+id/email_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@android:drawable/ic_media_play"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_image"
                        app:srcCompat="@android:drawable/ic_media_play" />

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email:"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/email_image"
                        app:layout_constraintEnd_toEndOf="@+id/username_text"
                        app:layout_constraintStart_toEndOf="@+id/email_image"
                        app:layout_constraintTop_toBottomOf="@+id/name_image" />

                    <EditText
                        android:id="@+id/email_textfield"
                        android:layout_width="160dp"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintBottom_toBottomOf="@+id/email_image"
                        app:layout_constraintStart_toEndOf="@+id/email_text"
                        app:layout_constraintTop_toBottomOf="@+id/name_image"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageView
                        android:id="@+id/phone_number_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@android:drawable/ic_media_play"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_image"
                        app:srcCompat="@android:drawable/ic_media_play" />

                    <TextView
                        android:id="@+id/phone_number_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phone #"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/username_text"
                        app:layout_constraintStart_toEndOf="@+id/phone_number_image"
                        app:layout_constraintTop_toBottomOf="@+id/email_image" />

                    <EditText
                        android:id="@+id/phone_number_textField"
                        android:layout_width="160dp"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintBottom_toBottomOf="@+id/phone_number_image"
                        app:layout_constraintStart_toEndOf="@+id/phone_number_text"
                        app:layout_constraintTop_toBottomOf="@+id/email_image"
                        tools:ignore="SpeakableTextPresentCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/AppearenceContraintView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/appearence_main_image"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:src="@android:mipmap/sym_def_app_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ImageContrastCheck" />

                    <Switch
                        android:id="@+id/appearence_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="Appearance"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/appearence_main_image"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/AppearenceListConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/dark_mode_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@android:drawable/ic_media_play"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@android:drawable/ic_media_play" />

                    <Switch
                        android:id="@+id/dark_mode_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dark mode"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/dark_mode_image"
                        app:layout_constraintStart_toEndOf="@+id/dark_mode_image"
                        app:layout_constraintTop_toTopOf="@+id/dark_mode_image"
                        tools:ignore="TouchTargetSizeCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/PrivacyConstraintView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="80dp"
                        android:layout_height="70dp"
                        android:src="@android:mipmap/sym_def_app_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ImageContrastCheck" />

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="Privacy"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/PrivacyListConstraint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>